--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
-  
+@tailwind components;
+@tailwind utilities;
+
+body{
+  color: white;
+  background-color: black;
+}
