--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ body {
   );
 }
 
+img {
+  user-drag: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
