--- a/src/index.css
+++ b/src/index.css
@@ -71,3 +71,42 @@ img {
   background: rgba(255, 255, 255, 0.15); /* White background with 50% opacity */
   color: #ffffff; /* White text color */
 }
+
+input[type="range"] {
+  /* removing default appearance */
+  -webkit-appearance: none;
+  appearance: none;
+  /* creating a custom design */
+  width: 100%;
+  cursor: pointer;
+  outline: none;
+}
+
+input[type="range"] {
+  /*  styling the track  */
+  height: 0.375rem;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 9999px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  /* removing default appearance */
+  -webkit-appearance: none;
+  appearance: none;
+  /* creating a custom design */
+  height: 0.375rem;
+  width: 15px;
+  background-color: #fff;
+  border-radius: 9999px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  /*  slider progress trick  */
+  box-shadow: -407px 0 0 400px #fff;
+}
+
+input[type="range"] {
+  /*  slider progress trick  */
+  overflow: hidden;
+  border-radius: 16px;
+}
