--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,7 @@ input[type="range"]::-webkit-slider-thumb {
   appearance: none;
   /* creating a custom design */
   height: 0.375rem;
-  width: 15px;
+  width: 1rem;
   background-color: #fff;
   border-radius: 9999px;
 }
