--- a/src/index.css
+++ b/src/index.css
@@ -110,3 +110,31 @@ input[type="range"] {
   overflow: hidden;
   border-radius: 16px;
 }
+
+.song-fade-in{
+  animation: fade-in 1s ease-out both;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fade-enter {
+  opacity: 0;
+}
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 300ms ease-in;
+}
+.fade-exit {
+  opacity: 1;
+}
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 300ms ease-in;
+}
