--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ body {
     rgba(0, 0, 0, 1) 100%
   );
   background-repeat: no-repeat;
-  transition: --accent 7s;
+  transition: --accent 5s;
 }
 
 /* setting image as non-draggable */
@@ -148,5 +148,26 @@ input[type="range"] {
 @media (max-width: 768px) {
   #expandSongListButton {
     display: inline-block; /* or block */
+  }
+}
+
+/* No Frame Two for small and smaller sizes */
+@media (max-width: 765px) {
+  body {
+    overflow: scroll;
+    height: calc(100vh + 780px);
+  }
+
+  .songListHeader {
+    display: none;
+  }
+}
+
+@media (min-width: 480px) and (max-width: 638px) {
+  .coverImg {
+    height: calc(100vw - 2rem);
+    width: 100vw;
+    max-width: 60vw;
+    max-height: 60vw;
   }
 }
